--- a/playground.ipynb
+++ b/playground.ipynb
@@ -1,6 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -39,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halo, Novita Arilfa\n"
+     ]
+    }
+   ],
    "source": [
     "nama = input(\"Masukkan nama: \")\n",
     "print(\"Halo, \" + nama)"
@@ -49,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 322095\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 1\n",
     "# masukkan id pada input sesuai dengan tipe data yang sudah ditentukan\n",
@@ -60,16 +81,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Tipe Data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "user = int(input(\"Enter a number: \"))\n",
@@ -156,17 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pangkat 3 = 1000\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 2\n",
-    "x = ___\n",
+    "x = 10\n",
     "y = 3\n",
     "\n",
-    "command = ___(input(\"Masukkan command: \"))\n",
+    "command = int(input(\"Masukkan command: \"))\n",
     "if command == 1:\n",
-    "    print(f\"{x} pangkat {___} = {x ** y}\") # output seharusnya 1000\n",
+    "    print(f\"{x} pangkat {y} = {x ** y}\") # output seharusnya 1000\n",
     "else:\n",
     "    print(\"Command tidak dikenali\")\n"
    ]
@@ -181,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = 241.0\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
-    "x = 120,5\n",
-    "y = 120,5\n",
+    "x = 120.5\n",
+    "y = 120.5\n",
     "print(f\"x + y = {x + y}\") # x + y should be 241"
    ]
   },
@@ -241,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,18 +392,26 @@
    "source": [
     "# challenge 4\n",
     "list2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(list2[__:__:__]) # output seharusnya [9, 7, 5, 3, 1]"
+    "print(list2[8:-11:-2]) # output seharusnya [9, 7, 5, 3, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['John', 25, 'orange', True, 3.14, 'apple']\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
-    "ls.___(__, ___)\n",
+    "ls.insert(2,'orange')\n",
     "print(ls) # Output: ['John', 25, 'orange', True, 3.14, 'apple']"
    ]
   },
@@ -391,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,25 +474,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Samuel\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 6\n",
     "# ubah value dari key 'name' menjadi 'Samuel'\n",
-    "employee['name'] = ___\n",
+    "employee['name'] = 'Samuel'\n",
     "print(employee['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 7\n",
     "# ubah value dari key 'age' menjadi 20 berdasatkan input user\n",
-    "employee['age'] = ___\n",
+    "employee['age'] = 20\n",
     "print(employee['age'])"
    ]
   }
@@ -479,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
